@@ -1,3 +1,10 @@
+2019-03-19 Philipp Klaus Krause <pkk AT spth.de>
+
+	* sim/ucsim/pdk.src/inst.cc:
+	  Simulator fixes, patches by Nicolas Lesser.
+	* sdas/aspdk15/pdk15mch.c:
+	  Assembler fix, patch by Nicolas Lesser.
+
 2019-03-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/ds390/gen.c: fix bug #2702
